--- a/src/app/product-from/product-from.component.css
+++ b/src/app/product-from/product-from.component.css
@@ -1,6 +1,6 @@
 
 form {
-    max-width: 1040px;
+    max-width: 1000px;
     margin: 60px auto;
     padding: 20px;
     border: 1px solid #ddd;
@@ -58,6 +58,7 @@ button[type="button"] {
   align-items: flex-start; 
   gap: 20px;
   margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 
@@ -141,7 +142,7 @@ button[type="button"] {
   .styled-table td:nth-child(1),
   .styled-table th:nth-child(9), 
   .styled-table td:nth-child(9){
-    width: 50px;
+    width: 40px;
     padding: 0.25rem;
   }
   
